<resources>
    <string name="paid">Paid</string>
    <string name="versus" translatable="false">vs.</string>
    <string name="new_game">New Game</string>
    <string name="add_game">Add new Game</string>
    <string name="add">Add</string>
    <string name="team">Team</string>
    <string name="home_team">Home</string>
    <string name="guest_team">Guest</string>
    <string name="stadium">Stadium</string>
    <string name="league">League</string>
    <string name="referee">Referee</string>
    <string name="delete">Delete game</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="warning_delete_text">Are you sure?</string>
    <string name="empty_list">Games list is empty</string>
    <string name="passed">Passed</string>
    <string name="chief_referee">Chief Referee</string>
    <string name="first_assistant">First Assistant</string>
    <string name="second_assistant">Second Assistant</string>
    <string name="reserve_referee">Reserve Referee</string>
    <string name="team_add_message">Team %1$s added</string>
    <string name="stadium_add_message">Stadium %1$s added</string>
    <string name="league_add_message">League %1$s added</string>
    <string name="referee_add_message">Referee %1$s added</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="inspector">Inspector</string>
    <string name="not_found">Not found</string>
    <string name="back">Back</string>
    <string name="first_name">First name</string>
    <string name="add_referee">Add referee</string>
    <string name="save">Save</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="title">Title</string>
    <string name="add_team">Add team</string>
    <string name="add_stadium">Add stadium</string>
    <string name="add_league">Add league</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create">Create</string>
    <string name="no_matches_found">No matches found</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_entity_to_db">Add &lt;b>%1$s&lt;/b> to base?</string>
    <string name="no_data">No data</string>
    <string name="empty_field">Empty field</string>
    <string name="press_again_delete">Press again for delete</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="temp" translatable="false">%d°</string>
    <string name="save_game">Save game</string>
    <string name="copy_title">Move in new game:</string>
    <string name="date_and_time">Date and time</string>
    <string name="state">State</string>
    <string name="teams">Teams</string>
    <string name="referees">Referee</string>
</resources>