<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <com.egraf.refapp.views.custom_views.CustomGameComponentInput
        android:id="@+id/middle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hintText="@string/middle_name" />

    <com.egraf.refapp.views.custom_views.CustomGameComponentInput
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hintText="@string/first_name" />

    <com.egraf.refapp.views.custom_views.CustomGameComponentInput
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hintText="@string/last_name" />

</merge>