<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.egraf.refapp.views.custom_views.game_components.ChiefRefereeComponentInputWithDialogs
        android:id="@+id/chief_referee_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        custom:mIcon="@drawable/ic_whistle"
        custom:title="@string/chief_referee"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"
        />

    <com.egraf.refapp.views.custom_views.game_components.FirstAssistantRefereeComponentInputWithDialogs
        android:id="@+id/first_assistant_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        custom:mIcon="@drawable/ic_assistant_flag"
        custom:title="@string/first_assistant"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"
        />

    <com.egraf.refapp.views.custom_views.game_components.SecondAssistantRefereeComponentInputWithDialogs
        android:id="@+id/second_assistant_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        custom:mIcon="@drawable/ic_assistant_flag"
        custom:title="@string/second_assistant"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"
        />

    <com.egraf.refapp.views.custom_views.game_components.ReserveRefereeComponentInputWithDialogs
        android:id="@+id/reserve_referee_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        custom:title="@string/reserve_referee"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"
        custom:mIcon="@drawable/ic_scoreboard"
        />
    <com.egraf.refapp.views.custom_views.game_components.InspectorComponentInputWithDialogs
        android:id="@+id/inspector_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        custom:title="@string/inspector"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"
        custom:mIcon="@drawable/ic_inspector"
        />
</LinearLayout>