<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:focusableInTouchMode="true">

    <com.egraf.refapp.views.custom_views.game_components.HomeTeamComponentInputWithDialogs
        android:id="@+id/home_team_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/guest_team_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        custom:title="@string/home_team"
        custom:startIcon="@drawable/ic_open_bracket"
        />

    <com.egraf.refapp.views.custom_views.game_components.GuestTeamComponentInputWithDialogs
        android:id="@+id/guest_team_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_team_view"
        app:layout_constraintTop_toTopOf="parent"

        custom:title="@string/guest_team"
        custom:startIcon="@drawable/ic_vertical_vector_separator"
        custom:endIcon="@drawable/ic_close_bracket"
        />

    <com.egraf.refapp.views.custom_views.game_components.StadiumComponentInputWithDialogs
        android:id="@+id/stadium_component_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_team_view"

        custom:mIcon="@drawable/ic_stadium"
        custom:title="@string/stadium"
    custom:startIcon="@drawable/ic_open_bracket"
    custom:endIcon="@drawable/ic_close_bracket"/>

    <com.egraf.refapp.views.custom_views.game_components.LeagueComponentInputWithDialogs
        android:id="@+id/league_component_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stadium_component_view"

        custom:mIcon="@drawable/ic_cup"
        custom:title="@string/league"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"/>


    <com.egraf.refapp.views.custom_views.game_components.ChiefRefereeComponentInputWithDialogs
        android:id="@+id/chief_referee_component_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/league_component_view"

        custom:mIcon="@drawable/ic_whistle"
        custom:title="@string/chief_referee"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"/>


    <com.egraf.refapp.views.custom_views.game_components.FirstAssistantRefereeComponentInputWithDialogs
        android:id="@+id/first_assistant_component_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chief_referee_component_view"

        custom:mIcon="@drawable/ic_assistant_flag"
        custom:title="@string/first_assistant"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"/>


    <com.egraf.refapp.views.custom_views.game_components.SecondAssistantRefereeComponentInputWithDialogs
        android:id="@+id/second_assistant_component_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_assistant_component_view"

        custom:mIcon="@drawable/ic_assistant_flag"
        custom:title="@string/second_assistant"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"/>


    <com.egraf.refapp.views.custom_views.game_components.ReserveRefereeComponentInputWithDialogs
        android:id="@+id/reserve_referee_component_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_assistant_component_view"

        custom:mIcon="@drawable/ic_scoreboard"
        custom:title="@string/reserve_referee"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"/>


    <com.egraf.refapp.views.custom_views.game_components.InspectorComponentInputWithDialogs
        android:id="@+id/inspector_component_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reserve_referee_component_view"

        custom:mIcon="@drawable/ic_inspector"
        custom:title="@string/inspector"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"/>


    <com.egraf.refapp.views.custom_views.game_components.DateInputWithDialog
        android:id="@+id/date_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/time_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inspector_component_view"

        custom:title="@string/date"
        custom:mIcon="@drawable/ic_calendar"
        custom:startIcon="@drawable/ic_open_bracket"
        />

    <com.egraf.refapp.views.custom_views.game_components.TimeInputWithDialog
        android:id="@+id/time_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/date_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/date_input"
        app:layout_constraintBottom_toBottomOf="@id/date_input"

        custom:title="@string/time"
        custom:mIcon="@drawable/ic_time"
        custom:startIcon="@drawable/ic_vertical_vector_separator"
        custom:endIcon="@drawable/ic_close_bracket"
        />

    <CheckBox
        android:id="@+id/game_paid_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gamePaidCheckbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_input"
        app:layout_constraintWidth_percent="0.5" />

    <CheckBox
        android:id="@+id/game_passed_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gamePassedCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/game_paid_check_box"
        app:layout_constraintTop_toTopOf="@id/game_paid_check_box"
        app:layout_constraintWidth_percent="0.5" />




    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete_forever"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_paid_check_box" />

</androidx.constraintlayout.widget.ConstraintLayout>