<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.egraf.refapp.views.custom_views.game_components.StadiumComponentInputWithDialogs
        android:id="@+id/stadium_component_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        custom:title="@string/stadium"
        custom:mIcon="@drawable/ic_stadium"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"
/>

    <com.egraf.refapp.views.custom_views.game_components.DateInputWithDialog
        android:id="@+id/date_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/time_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stadium_component_view"

        custom:title="@string/date"
        custom:mIcon="@drawable/ic_calendar"
        custom:startIcon="@drawable/ic_open_bracket"
        />

    <com.egraf.refapp.views.custom_views.game_components.TimeInputWithDialog
        android:id="@+id/time_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/date_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/date_input"
        app:layout_constraintBottom_toBottomOf="@id/date_input"

        custom:title="@string/time"
        custom:mIcon="@drawable/ic_time"
        custom:startIcon="@drawable/ic_vertical_vector_separator"
        custom:endIcon="@drawable/ic_close_bracket"
        />

    <CheckBox
        android:id="@+id/game_passed_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/passed"
        app:layout_constraintEnd_toStartOf="@id/game_paid_check_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_input"
        app:useMaterialThemeColors="false" />

    <CheckBox
        android:id="@+id/game_paid_check_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:minHeight="48dp"
        android:text="@string/paid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/game_passed_check_box"
        app:layout_constraintTop_toTopOf="@id/game_passed_check_box" />
</androidx.constraintlayout.widget.ConstraintLayout>