<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.egraf.refapp.views.custom_views.game_components.HomeTeamComponentInputWithDialogs
        android:id="@+id/home_team_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        custom:mIcon="@drawable/ic_polo_home"
        custom:title="@string/home_team"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"
        />

    <com.egraf.refapp.views.custom_views.game_components.GuestTeamComponentInputWithDialogs
        android:id="@+id/guest_team_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        custom:mIcon="@drawable/ic_polo_guest"
        custom:title="@string/guest_team"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"
        />

    <com.egraf.refapp.views.custom_views.game_components.LeagueComponentInputWithDialogs
        android:id="@+id/league_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        custom:mIcon="@drawable/ic_cup"
        custom:title="@string/league"
        custom:startIcon="@drawable/ic_open_bracket"
        custom:endIcon="@drawable/ic_close_bracket"
        />


</LinearLayout>