<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/delete_button"
        android:contentDescription="@string/delete" />

    <ImageButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_accept_button_dim"
        android:contentDescription="@string/save_game"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="@id/cancel_button"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"
        app:layout_constraintTop_toTopOf="@id/cancel_button" />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/cancel_button"
        android:contentDescription="@string/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>
